# sklib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  OVERNIGHT_SUMMARY.md  README.md  TODO.md  improve_ram.md  procedure_remplissage.txt
.github/workflows/: build_and_test.yaml
app/: CMakeLists.txt
app/produce/: CMakeLists.txt  produce_skmers.cpp
app/rsqf/: CMakeLists.txt
app/sortedlists/: CMakeLists.txt  cli.cpp  cli.hpp  commands.cpp  commands.hpp  options.hpp  sskm.cpp
benchmark/: README.md
benchmark/data/: README.md  genomes.tsv
benchmark/results/: README.md
benchmark/results/journals/: CONSTRUCT_SCALING_DIAG.md  CONSTRUCT_SPEEDUP.md  GREEDY_DEFAULT.md  PRODUCER_BOTTLENECKS.md  PRODUCER_SPEEDUP.md  QUERY_XOR_SPEEDUP.md  README.md  SETOPS_BOTTLENECKS.md  SETOPS_MULTI_REPORT.md  SETOPS_REPORT.md  UNION_SPEEDUP.md  XOR_SPEEDUP.md
benchmark/results/reference/: README.md  bottleneck_decompose.csv  bottleneck_reprofile_cycinst.csv  bottleneck_sweep_buckets.csv  producer_digest.tsv  setops_multi_v2.csv  setops_overlap.csv  setops_wide_width.csv
benchmark/results/reports/: CONSTRUCT_SCALING_DIAG.md  GREEDY_DEFAULT.md  PRODUCER_BOTTLENECKS.md  PRODUCER_SPEEDUP.md  SETOPS_BOTTLENECKS.md  SETOPS_REPORT.md  SETOPS_WIDE_WIDTH.md  UNION_SPEEDUP.md  XOR_SPEEDUP.md
benchmark/results/reports/full_run_2026-06/: EXPERIMENT.md  RESULTS.md
benchmark/results/reports/full_run_2026-06/data/: query_single.csv  query_stream.csv
benchmark/results/runs/: README.md
benchmark/results/runs/full_run_2026-06/data/: construct.csv
benchmark/scripts/: README.md  construct.sh  construct_scaling.sh  diag_perf.sh  diag_plot.py  e2e_helpers.py  fetch_genomes.sh  flamegraph_construct.sh  genomes.sh  large_scale_e2e.sh  lib.sh  mutate.py  plot.py  producer_bench.sh  producer_median.sh  producer_perf.sh  producer_setcheck.sh  query_single.sh  query_stream.sh  setop.sh  setop_joint_compare.sh  setop_joint_report.py  tools.sh  union_ab.sh  union_bench.sh
benchmark/scripts/bottleneck/: perf_categorize.py
benchmark/scripts/microbench/: setop_joint_compare.sh  union_ab.sh  union_bench.sh
benchmark/scripts/producer/: producer_bench.sh  producer_median.sh  producer_perf.sh  producer_setcheck.sh
benchmark/scripts/profiling/: construct_scaling.sh  diag_perf.sh  diag_plot.py  flamegraph_construct.sh
benchmark/scripts/profiling/bottleneck/: decompose.sh
benchmark/scripts/tools/: bcalm.sh  bqf.sh  cbl.sh  sbwtrs.sh  setup.sh
benchmark/scripts/verify/: greedy_chaining_verif.sh  large_scale_e2e.sh
benchmark/union_bench/: CMakeLists.txt  README.md  union_bench.cpp
data/: small.fa
docs/: sentinel_substrate.md
lib/: CMakeLists.txt  config.hpp.in
lib/include/algorithms/: ColinearChaining.hpp  Parallel.hpp  ParallelConstruct.hpp  ParallelQuery.hpp  SetOperations.hpp  SkmerBucketWriter.hpp  SkmerPartialOrder.hpp  SkmerSorting.hpp  SortedSkmerListBuilder.hpp  VirtualSkmer.hpp  WidthDispatch.hpp
lib/include/dbg/datastruct/: BitArray.hpp  PackedArray.hpp  RSQF.hpp  bit.hpp
lib/include/io/: Kmer.hpp  Kmerator.hpp  Skmer.hpp  SkmerDigest.hpp  Skmerator.hpp  io.hpp  wide_int.hpp
lib/src/algorithms/: ColinearChaining.cpp  SkmerSorting.cpp
lib/src/datastruct/: bit.cpp
scripts/: e2e_helpers.py  flamegraph_construct.sh  large_scale_e2e.sh
scripts/bench/: README.md  bench.sh  bench_buckets.sh  bench_setops.sh  bench_setops_multi.sh  compare.py  lib.sh  plot_setops.py  plots.py  run_ksweep.sh  run_overlap.sh  run_realpairs.sh  run_scaling.sh  run_setops_multi.sh  run_setops_parallel.sh  run_threads.sh  tools.sh
scripts/bench/datasets/: README.md
scripts/bench/report/: CONSTRUCT_SPEEDUP.md  SETOPS_BOTTLENECKS.md  SETOPS_MULTI_REPORT.md  SETOPS_REPORT.md
scripts/bench/report/data/: bottleneck_construct.csv  bottleneck_impl_results.csv  bottleneck_perf_summary.txt  bottleneck_reprofile_postopt.csv  bottleneck_sweep_k.csv  bottleneck_sweep_m.csv  setops_ksweep.csv  setops_multi_v1.csv  setops_overlap.csv  setops_parallel.csv  setops_realpairs.csv  setops_scaling.csv  setops_threads.csv
scripts/bench/tools/: bqf.sh  callgrind_to_folded.py  cbl.sh  fmsi.sh  sbwt.sh  setup.sh  sshash.sh
tests/: CMakeLists.txt  kmer_content_verif.sh  rc.sh  sequences_2_fa.sh  setop_multi_verif.sh  setop_verif.sh
tests/data/: fasta0.fa  fasta00.fa  sample_skmers.fa  sars-cov-2-delta-variant.fasta  seq2.fa  short_skip.fa
tests/datastruct/: BitArray.cpp  rsqf.cpp
tests/km/: BucketedSkmerList.cpp  ColinearChaining.cpp  ParallelConstruct.cpp  QuotientWidth.cpp  SetOperations.cpp  SkmerPartialOrder.cpp  SortedSkmer.cpp  VirtualSkmer.cpp  bench_substrate_query.cpp  bug05_query_word_boundary.cpp  bug06_construct_homopolymer_drop.cpp  bug07_query_context_framing.cpp  debug.txt  framing_per_kmer.cpp  interp_experiment.cpp  io.cpp  kmerator.cpp  minimizer_hash.cpp  sentinel_substrate.cpp  skmer.cpp  skmerator.cpp  skmerator_digest.cpp  strand_invariance.cpp  test_data.hpp
